--- a/ARBasketball/Base.lproj/Main.storyboard
+++ b/ARBasketball/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="xzn-9M-TJw">
                                 <rect key="frame" x="55.5" y="602" width="264" height="40"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCk-DR-3pQ">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCk-DR-3pQ" customClass="CustomButton" customModule="ARBasketball" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="80" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="XHZ-fk-GeG"/>
@@ -38,7 +38,7 @@
                                             <action selector="startHorizontalAction:" destination="BV1-FR-VrT" eventType="touchUpInside" id="6z3-Ho-6ew"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2VA-Vw-8Kt">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2VA-Vw-8Kt" customClass="CustomButton" customModule="ARBasketball" customModuleProvider="target">
                                         <rect key="frame" x="92" y="0.0" width="80" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="8tI-2z-Gyq"/>
@@ -52,7 +52,7 @@
                                             <action selector="stopAllActions:" destination="BV1-FR-VrT" eventType="touchUpInside" id="u1f-AE-AhU"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rwu-he-2cd">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rwu-he-2cd" customClass="CustomButton" customModule="ARBasketball" customModuleProvider="target">
                                         <rect key="frame" x="184" y="0.0" width="80" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Q8f-JG-Ppu"/>
@@ -68,7 +68,7 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IdY-33-OLZ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IdY-33-OLZ" customClass="CustomButton" customModule="ARBasketball" customModuleProvider="target">
                                 <rect key="frame" x="147.5" y="314" width="80" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="D83-YR-svp"/>
